@@ -2,6 +2,7 @@
 * Xpath query parser was not matching leading '//axis::node' correctly. The axis was being parsed as '/axis'.
 * The <tt>parent</tt> axis was not being handled correctly for the root node.
 * Xpath queries were returning node-sets that contained duplicate nodes.
+* The Manipulate::remove function was not removing only the selected node. All nodes that matched <tt>==</tt> were being returned.
 
 == 0.1.4 - 2010.06.26
 * Xpath searches with attribute values containing a <tt>/</tt>, like <tt>style[@type="text/css"]</tt>, broke the query parser.
